esta es la prueva si de esta manera funciona

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,3 +3,5 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/ooyfalbu/CamiloSiPuede/
     - /bin/cp -R CSS $DEPLOYPATH
+    - /bin/cp -R JAVASCRIPT $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
